<resources>
    <string name="app_name">MNSInstitute</string>
    <string name="maps_api_key">AIzaSyCZllFT2yGKn3lB8__vx7Q0XN6YBQmGME0</string>
    <string name="instituteName">MNS Institute</string>
    <string name="instituteStart">Since 2000</string>
    <string name="moto">Strive to Build the Next Generation</string>
    <string name="skipIntro">Skip Intro</string>
    <string name="stopIntro">Stop Intro</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="noAccount">Don’t have an account?</string>
    <string name="userName">Email (User Name)</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="instituteLogo">Institute Logo</string>
    <string name="greeting">Hi</string>
    <string name="manageStudents">Manage Students</string>
    <string name="manageClasses">Manage Classes</string>
    <string name="manageClass">Manage Class</string>
    <string name="timetable">Timetable</string>
    <string name="lostAndFound">Lost and Found</string>
    <string name="messaging">Messaging</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="grade">Grade</string>
    <string name="address">Permanent Address</string>
    <string name="fullName">Full Name</string>
    <string name="viewStudentList">View Students List</string>
    <string name="addStudent">Add Students</string>
    <string name="editStudentProfile">Edit Student Profile</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reports">Reports</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="viewClassDetails">View Class Details</string>
    <string name="updateClassDetails">Update Class Details</string>
    <string name="deleteClassDetails">Delete Class Details</string>
    <string name="viewStudents">View Students</string>
    <string name="messageClass">Message to Class</string>
    <string name="studyPlane">Study  Plan</string>
    <string name="headerClass">Class</string>
    <string name="headerDayTime">Day/Time</string>
    <string name="hintFrom">Your Current Location</string>
    <string name="hintRoute">Route details</string>
    <string name="hintDistance">Route distance</string>
    <string name="btnRoute">Re-Route</string>
    <string name="logout">Logout</string>
    <string name="map">Direct Me (Map)</string>
    <string name="title">Way to the MNS Institute</string>
    <string name="hintStart">Starting Place</string>
    <string name="hintEnd">Ending Place</string>
    <string name="show_route">Show Route</string>
    <string name="addClass">Add a Class</string>
    <string name="className">Class name</string>
    <string name="week_timetable">Week\'s Class Timetable</string>
</resources>