<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instituteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteName"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/instituteStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="38sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/instituteLogo"
            app:srcCompat="@drawable/mns_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/inputFullName"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="text"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/inputPhoneNo"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/inputGrade"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/grade"
            android:inputType="textEmailAddress"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:autofillHints="postalAddress"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textEmailAddress"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textSize="20sp"  />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>