<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageStudentsActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instituteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteName"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/instituteStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteStart"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:text="@string/manageStudents"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/viewStudentList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewStudentList"
            android:textSize="24sp"
            android:width="300dp"
            android:height="60dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/addStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addStudent"
            android:textSize="24sp"
            android:width="300dp"
            android:height="60dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/editStudentProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editStudentProfile"
            android:textSize="24sp"
            android:width="300dp"
            android:height="60dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="270dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/prev" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/home" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>