<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loggedInUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/instituteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteName"
            android:textSize="40sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text=""
            android:maxWidth="100dp"
            android:maxHeight="40dp"
            android:textSize="28sp"
            android:textStyle="bold"/>
    </LinearLayout>

        <TextView
            android:id="@+id/instituteStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteStart"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/manageStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/manageStudents"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/manageClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/manageClass"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/timetable"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/lostAndFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/lostAndFound"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/map"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/messaging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/messaging"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/settings"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/logout" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/exit" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>