<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddClassTimeSlotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="300dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/loggedInUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/instituteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instituteName"
                android:textSize="48sp"/>

            <TextView
                android:id="@+id/instituteStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instituteStart"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:text="@string/week_timetable"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/className"
                android:inputType="text"
                android:text="" />

            <Spinner
                android:id="@+id/spinner_days"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrev"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/prev" />

                <Button
                    android:id="@+id/addTimeSlot"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btnHome"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/home" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>