<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LostAndFoundActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="300dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/loggedInUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/instituteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteName"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/instituteStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituteStart"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:text="History G. 11 24-OL"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/prev" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/home" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>